app/javascript/styles/mastodon/components.scss
/* ... */
.dropdown-button {
  display: flex;
  align-items: center;
  gap: 4px;
  background: transparent;
  color: $highlight-text-color;
  border-radius: 6px;
  border: 1px solid $highlight-text-color;
  padding: 4px 8px;
  font-size: 13px;
  line-height: normal;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  &[disabled] {
    cursor: default;
    color: $highlight-text-color;
    border-color: $highlight-text-color;
    opacity: 0.5;
  }

  .icon {
    width: 15px;
    height: 15px;
    flex: 0 0 auto;
  }

  &__label {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    flex: 1 1 auto;
  }

  &.active {
    background: $ui-highlight-color;
    border-color: $ui-highlight-color;
    color: $primary-text-color;
  }

  &.warning {
    border-color: var(--goldenrod-2);
    color: var(--goldenrod-2);

    &.active {
      background-color: var(--goldenrod-2);
      color: var(--indigo-1);
    }
  }
}

.character-counter {
  cursor: default;
  font-family: $font-sans-serif, sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: normal;
  color: $darker-text-color;
  flex: 1 0 auto;
  text-align: end;

  &.character-counter--over {
    color: $error-red;
  }
}

.no-reduce-motion .spoiler-input {
  transition:
    height 0.4s ease,
    opacity 0.4s ease;
}

.sign-in-banner {
  padding: 10px;

  p {
    font-size: 15px;
    line-height: 22px;
    color: $secondary-text-color;
    margin-bottom: 20px;

    strong {
      font-weight: 700;
    }

    a {
      color: $secondary-text-color;
      text-decoration: none;
      unicode-bidi: isolate;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  .button {
    margin-bottom: 10px;
  }
}

.emojione {
  font-size: inherit;
  vertical-align: middle;
  object-fit: contain;
  margin: -0.2ex 0.15em 0.2ex;
  width: 16px;
  height: 16px;

  img {
    width: auto;
  }
}

.status__content--with-action {
  cursor: pointer;
}

.status__content {
  clear: both;
}

.status__content,
.edit-indicator__content,
.reply-indicator__content {
  position: relative;
  overflow-wrap: break-word;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 15px;
  line-height: 22px;
  padding-top: 2px;
  color: $primary-text-color;

  &:focus {
    outline: 0;
  }

  &.status__content--with-spoiler {
    white-space: normal;

    .status__content__text {
      white-space: pre-wrap;
    }
  }

  .emojione {
    width: 20px;
    height: 20px;
    margin: -3px 0 0;
  }

  p {
    margin-bottom: 22px;
    white-space: pre-wrap;
    unicode-bidi: plaintext;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: $secondary-text-color;
    text-decoration: underline;
    unicode-bidi: isolate;

    &:hover {
      text-decoration: underline;
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }
  }

  a.unhandled-link {
    color: $highlight-text-color;
  }

  .status__content__spoiler-link {
    background: $action-button-color;

    &:hover,
    &:focus {
      background: lighten($action-button-color, 7%);
      text-decoration: none;
    }

    &::-moz-focus-inner {
      border: 0;
    }

    &::-moz-focus-inner,
    &:focus,
    &:active {
      outline: 0 !important;
    }
  }

  .status__content__spoiler-icon {
    margin: 0 0 0 4px;
  }

  .status__content__text {
    display: none;

    &.status__content__text--visible {
      display: block;
    }
  }
}

.reply-indicator {
  display: grid;
  grid-template-columns: 46px minmax(0, 1fr);
  grid-template-rows: 46px max-content;
  gap: 0 10px;

  .detailed-status__display-name {
    margin-bottom: 4px;
  }

  .detailed-status__display-avatar {
    grid-column-start: 1;
    grid-row-start: 1;
    grid-row-end: span 1;
  }

  &__main {
    grid-column-start: 2;
    grid-row-start: 1;
    grid-row-end: span 2;
  }

  .display-name {
    font-size: 14px;
    line-height: 16px;

    &__account {
      display: none;
    }
  }

  &__line {
    grid-column-start: 1;
    grid-row-start: 2;
    grid-row-end: span 1;
    position: relative;

    &::before {
      display: block;
      content: '';
      position: absolute;
      inset-inline-start: 50%;
      top: 4px;
      transform: translateX(-50%);
      background: lighten($ui-base-color, 8%);
      width: 2px;
      height: calc(100% + 32px - 8px); // Account for gap to next element
    }
  }

  &__content {
    font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.25px;
    display: -webkit-box;
    line-clamp: 4;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    padding: 0;
    max-height: 4 * 20px;
    overflow: hidden;
    color: $darker-text-color;
  }

  &__attachments {
    margin-top: 4px;
    color: $darker-text-color;
    font-size: 12px;
    line-height: 16px;
    display: flex;
    align-items: center;
    gap: 4px;

    .icon {
      width: 18px;
      height: 18px;
    }
  }
}
/* ... */

